<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/newGame"
        android:id="@+id/textView2"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:textSize="70dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chooseDifficulty"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="45dp"
        android:background="#e5e1e1"
        android:textAlignment="center" />

    <Button

        android:text="@string/easy"
        android:id="@+id/button3"

        android:layout_marginTop="44dp"

        android:background="#a4a3a3"
        android:textColor="#ffffff"


        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:textSize="30dp" />

    <Button

        android:text="@string/medium"
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:textSize="30dp"
        android:background="#696767"
        android:textColor="#ffffff" />

    <Button

        android:text="@string/hard"
        android:id="@+id/button5"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:textSize="30dp"
        android:background="#413f3f"
        android:textColor="#ffffff" />

    <Button

        android:text="@string/dontEvenTry"
        android:id="@+id/button6"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:textSize="30dp"
        android:background="#1f1e1e"
        android:textColor="#ffffff" />

</LinearLayout>


