<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscores"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:textSize="70sp"
        android:textColor="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="24.76" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first"
        android:id="@+id/textView9"
        android:textSize="80sp"
        android:textColor="#636363"
        android:layout_weight="0.09" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/second"
        android:id="@+id/textView10"
        android:textSize="80sp"
        android:textColor="#636363"
        android:layout_weight="0.11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/third"
        android:id="@+id/textView11"
        android:textSize="80sp"
        android:textColor="#636363"
        android:layout_marginBottom="88dp"
        android:layout_weight="0.14" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/backtomenu"
        android:id="@+id/button7"
        android:textSize="50sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="160.59" />
</LinearLayout>
