<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.fynn.buttons.GameOverActivity">

    <android.support.design.widget.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_over"
        android:id="@+id/textView3"
        android:textSize="60sp"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:textColorHighlight="#d52020"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:id="@+id/textView4yourscore"
        android:shadowColor="#af2121"
        android:layout_marginTop="38dp"
        android:textSize="40sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_gameover"
        android:id="@+id/button_menu"
        android:layout_marginTop="104dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textSize="50dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_try_again"
        android:id="@+id/button8"
        android:layout_below="@+id/button_menu"
        android:textSize="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/show_score"
        android:id="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="70sp"
        android:layout_below="@+id/textView4yourscore" />


</RelativeLayout>