<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.fynn.buttons.GameActivity">

    <ImageView
        android:layout_width="360dp"
        android:layout_height="450dp"
        android:id="@+id/imageView"
        android:background="#FFFFF0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/picturebox"
        android:layout_above="@+id/buttonred"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="90dp"
        android:layout_height="96dp"
        android:id="@+id/buttonred"
        android:background="#ff0000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="90dp"
        android:layout_height="96dp"
        android:id="@+id/buttonyellow"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonred"
        android:layout_toEndOf="@+id/buttonred"
        android:background="#FFFF00" />

    <Button
        android:layout_width="90dp"
        android:layout_height="96dp"
        android:id="@+id/buttongreen"
        android:layout_alignBottom="@+id/buttonyellow"
        android:layout_toRightOf="@+id/buttonyellow"
        android:layout_toEndOf="@+id/buttonyellow"
        android:background="#00ff00" />

    <Button
        android:layout_width="90dp"
        android:layout_height="96dp"
        android:id="@+id/buttonblue"
        android:layout_alignTop="@+id/buttongreen"
        android:layout_toRightOf="@+id/buttongreen"
        android:layout_toEndOf="@+id/buttongreen"
        android:background="#0000FF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/show_points"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:textSize="80sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#62000000" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/startgame"
        android:id="@+id/button7startgame"
        android:textSize="50sp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="106dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hithecolor"
        android:id="@+id/textView6"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="80sp" />

</RelativeLayout>
